<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="251dp"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logoinacap" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="104dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/apple" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/txt_titulo" />

    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hnt_ingrese_nombre" />

    <EditText
        android:id="@+id/edt_edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hnt_ingrese_edad"
        android:inputType="number"
        android:maxLength="9"/>

    <EditText
        android:id="@+id/edt_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hnt_peso"
        android:inputType="number"
        android:maxLength="9"/>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableRight="@drawable/click"
        android:text="@string/btn_calcular" />


</LinearLayout>